<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_bg"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/ll_details_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@color/item_fg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_details_parameters"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toStartOf="@id/gl_details_vert_middle"
        app:layout_constraintStart_toStartOf="@id/ll_details_background"
        app:layout_constraintTop_toTopOf="@id/ll_details_background">

        <TextView
            android:id="@+id/tv_details_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_text"
            android:textSize="20sp"
            tools:text="0.2 BTC" />

        <TextView
            android:id="@+id/tv_details_item_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_text"
            android:textSize="18sp"
            tools:text="Предметы > Бартер" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_details_icon"
        android:layout_width="wrap_content"
        android:maxWidth="160dp"
        android:layout_height="120dp"
        android:layout_margin="12dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="@id/ll_details_background"
        app:layout_constraintTop_toTopOf="@id/ll_details_background"
        tools:ignore="ContentDescription"
        tools:src="@drawable/physical_bitcoin__btc__lg" />

    <ImageView
        android:id="@+id/iv_details_favourite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="@id/iv_details_icon"
        app:layout_constraintTop_toTopOf="@id/iv_details_icon"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_details_icon_small"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="@id/ll_details_background"
        app:layout_constraintTop_toTopOf="@id/ll_details_background"
        tools:ignore="ContentDescription"
        tools:src="@drawable/physical_bitcoin__btc__sm" />

    <TextView
        android:id="@+id/tv_details_item_short_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:textColor="@color/item_text"
        app:layout_constraintEnd_toEndOf="@id/iv_details_icon"
        app:layout_constraintStart_toStartOf="@id/iv_details_icon"
        app:layout_constraintTop_toBottomOf="@id/iv_details_icon"
        tools:text="0.2 BTC" />

    <ImageView
        android:id="@+id/iv_details_big_icon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_details_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="180dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_details_vert_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="200dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toStartOf="@id/gl_details_vert_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_details_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_flea_price"
            android:textColor="@color/details_text_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_details_flea_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="49,000₽" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_lowest_price"
            android:textColor="@color/item_text"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_details_vert_middle"
        app:layout_constraintTop_toTopOf="@id/gl_details_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_price_per_slot"
            android:textColor="@color/details_text_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_details_price_per_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="49,000₽" />

        <TextView
            android:id="@+id/tv_details_slots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_text"
            android:textSize="18sp"
            tools:text="(1 Slot)" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_details_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="320dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="@id/gl_details_vert_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_details_middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_sell_to_trader"
            android:textColor="@color/details_text_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_details_trader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_text"
            android:textSize="20sp"
            tools:text="Peacekeeper LL1" />

        <TextView
            android:id="@+id/tv_details_trader_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="$671 ~ 71,797₽" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_details_vert_middle"
        app:layout_constraintTop_toTopOf="@id/gl_details_middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_average_price"
            android:textColor="@color/details_text_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_details_avg_price_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_text"
            android:textSize="18sp"
            tools:text="24 hours:  58,861₽" />

        <TextView
            android:id="@+id/tv_details_avg_price_7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_text"
            android:textSize="18sp"
            tools:text="7 days:  60,076₽" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_details_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="450dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_details_bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_price_difference"
            android:textColor="@color/details_text_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_details_change_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_text"
            android:textSize="18sp"
            tools:text="24 hours:  58,861₽" />

        <TextView
            android:id="@+id/tv_details_change_7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/item_text"
            android:textSize="18sp"
            tools:text="7 days:  60,076₽" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>